Closed Bug 1295871 Opened 8 years ago Closed 8 years ago

/mailnews/addrbook/src/nsAbCardProperty.cpp: error: unused variable CHAT_ATTRS_ARRAY

Categories

(SeaMonkey :: Build Config, defect)

x86_64
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
seamonkey2.48

People

(Reporter: ewong, Assigned: ewong)

Details

Attachments

(1 file)

New bustage:

/builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o nsAbBoolExprToLDAPFilter.o -c  -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DMOZ_LDAP_XPCOM -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/mailnews/addrbook/src  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss       -fPIC  -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/nsAbBoolExprToLDAPFilter.o.pp -Qunused-arguments  -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe  -gdwarf-2 -O3 -fno-omit-frame-pointer  -Werror   /builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src/nsAbBoolExprToLDAPFilter.cpp
/builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o nsAbBooleanExpression.o -c  -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DMOZ_LDAP_XPCOM -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/mailnews/addrbook/src  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss       -fPIC  -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/nsAbBooleanExpression.o.pp -Qunused-arguments  -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe  -gdwarf-2 -O3 -fno-omit-frame-pointer  -Werror   /builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src/nsAbBooleanExpression.cpp
/builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o nsAbCardProperty.o -c  -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DMOZ_LDAP_XPCOM -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/mailnews/addrbook/src  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss       -fPIC  -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/nsAbCardProperty.o.pp -Qunused-arguments  -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe  -gdwarf-2 -O3 -fno-omit-frame-pointer  -Werror   /builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src/nsAbCardProperty.cpp
/builds/slave/c-cen-t-osx64/build/clang/bin/clang++ -arch x86_64 -std=gnu++11 -o nsMsgHdr.o -c  -fvisibility=hidden -fvisibility-inlines-hidden -DNDEBUG=1 -DTRIMMED=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/builds/slave/c-cen-t-osx64/build/mailnews/db/msgdb/src -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/mailnews/db/msgdb/src  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include  -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nspr -I/builds/slave/c-cen-t-osx64/build/objdir/x86_64/dist/include/nss       -fPIC  -DMOZILLA_CLIENT -include /builds/slave/c-cen-t-osx64/build/objdir/x86_64/mozilla-config.h -MD -MP -MF .deps/nsMsgHdr.o.pp -Qunused-arguments  -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wclass-varargs -Wloop-analysis -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wthread-safety -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -gdwarf-2 -isysroot /Developer/SDKs/MacOSX10.7.sdk -fno-exceptions -fno-strict-aliasing -stdlib=libc++ -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe  -gdwarf-2 -O3 -fno-omit-frame-pointer  -Werror   /builds/slave/c-cen-t-osx64/build/mailnews/db/msgdb/src/nsMsgHdr.cpp
/builds/slave/c-cen-t-osx64/build/mailnews/addrbook/src/nsAbCardProperty.cpp:96:25: error: unused variable 'CHAT_ATTRS_ARRAY' [-Werror,-Wunused-const-variable]
static const AppendItem CHAT_ATTRS_ARRAY[] = {
                        ^
1 error generated.
make[5]: *** [nsAbCardProperty.o] Error 1
make[4]: *** [mailnews/addrbook/src/target] Error 2
make[4]: *** Waiting for unfinished jobs....
Summary: /src/nsAbCardProperty.cpp: error: unused variable CHAT_ATTRS_ARRAY → /mailnews/addrbook/src/nsAbCardProperty.cpp: error: unused variable CHAT_ATTRS_ARRAY
Attached patch proposed patchSplinter Review
CHAT_ATTRS_ARRAY should only be defined if building Thunderbird.
Assignee: nobody → ewong
Status: NEW → ASSIGNED
Attachment #8781832 - Flags: review?(rkent)
Comment on attachment 8781832 [details] [diff] [review]
proposed patch

Review of attachment 8781832 [details] [diff] [review]:
-----------------------------------------------------------------

The only use of that variable is also protectedby if Thunderbird, so this is fine.
Attachment #8781832 - Flags: review?(rkent) → review+
https://hg.mozilla.org/comm-central/rev/94a5190aa5ee96d1b5d072cb179713661d19a734
Bug 1295871 - CHAT_ATTRS_ARRAY should only be defined if MOZ_THUNDERBIRD=1. r=rkent
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: