Bug 1295871 - CHAT_ATTRS_ARRAY should only be defined if MOZ_THUNDERBIRD=1. r=rkent